# Conceptum

./: CMakeLists.txt  README.md  test.txt
docs/: instruction_set.txt
make/: CMakeCache.txt  Makefile  cmake_install.cmake
md/: CMakeCache.txt  Conceptum  Makefile  cmake_install.cmake  lines.fng  test.fng
src/: a.out  assembler.c  assembler.h  conceptlint.c  conceptlint.h  instruction_set.h  main.c  memman.c  memman.h  save.c  stack.h
tests/bytecodes/: dummy.fng
